--- a/ipython_graphs/iPython and Ad-Hoc Graphs.ipynb
+++ b/ipython_graphs/iPython and Ad-Hoc Graphs.ipynb
@@ -33,7 +33,7 @@
     "import psycopg2\n",
     "from pylab import *\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2')\n",
+    "conn=psycopg2.connect('dbname=statsdemo')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"SELECT att, count(*) as members \n",
     "    FROM ndasurvey GROUP BY att ORDER BY att\"\"\");\n",
@@ -78,7 +78,7 @@
     "import psycopg2\n",
     "from pylab import *\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2')\n",
+    "conn=psycopg2.connect('dbname=statsdemo')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"WITH counts AS (SELECT att, \n",
     "    count(*) as members\n",
@@ -124,7 +124,7 @@
     "import psycopg2\n",
     "from pylab import *\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2')\n",
+    "conn=psycopg2.connect('dbname=statsdemo')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"WITH counts AS (SELECT att, \n",
     "    count(*) as members,\n",
@@ -174,7 +174,7 @@
     "import psycopg2\n",
     "from pylab import *\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2')\n",
+    "conn=psycopg2.connect('dbname=statsdemo')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"WITH counts AS (SELECT att, \n",
     "    count(*) as members,\n",
@@ -228,7 +228,7 @@
     "from matplotlib import dates\n",
     "\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2')\n",
+    "conn=psycopg2.connect('dbname=statsdemo')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"WITH maggs AS ( \n",
     "    SELECT measurement_time AS mtime, \n",
@@ -297,7 +297,7 @@
     "from psycopg2.extras import RealDictCursor\n",
     "\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2', cursor_factory=RealDictCursor)\n",
+    "conn=psycopg2.connect('dbname=statsdemo', cursor_factory=RealDictCursor)\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"WITH maggs AS ( \n",
     "    SELECT measurement_time AS mtime, \n",
@@ -411,7 +411,7 @@
     "from psycopg2.extras import RealDictCursor\n",
     "\n",
     "\n",
-    "conn=psycopg2.connect('dbname=statsdemo host=172.17.0.2', cursor_factory=RealDictCursor)\n",
+    "conn=psycopg2.connect('dbname=statsdemo', cursor_factory=RealDictCursor)\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"\n",
     "    WITH cpu_data AS (\n",
